# quantpython

./: README.md
autoquant-alpha/: .gitignore  Dockerfile  pyproject.toml  requirements.in  requirements.txt
autoquant-alpha/.devcontainer/: devcontainer.json
autoquant-alpha/scripts/: cleanup.sh  demo.sh  start.sh  verify.sh
autoquant-alpha/src/: __init__.py  config.py  dashboard.py  health_check.py  logger.py
autoquant-alpha/tests/: stress_test.py  test_config.py  test_health_check.py
day10/autoquant_day10/: .env.example  .gitignore  README.md  cleanup.py  demo.py  requirements.txt  start.py  verify.py
day15/autoquant-alpha-d15/: .gitignore  pyproject.toml  requirements.txt
day2/autoquant-alpha-day2/: .gitignore  README.md  requirements.txt
day20/autoquant_day20/: README.md  main.py  requirements.txt
day25/autoquant_day25/: requirements.txt
day3/autoquant_cagr/: .gitignore  README.md  requirements.txt  validate_dashboard.py
day30/autoquant-day30/: .gitignore  README.md  (+1 more)
day4/autoquant-day04/: Makefile  pyproject.toml  setup.py
day4/autoquant-day04/data/: asset_registry.json  verify_registry.json
day4/autoquant-day04/src/: asset_metadata.py  asset_registry.py  demo.py  stress_test.py  verify.py
day4/autoquant-day04/tests/: test_asset_metadata.py  test_asset_registry.py
day6/autoquant_day06/: README.md  pyproject.toml
day6/autoquant_day06/scripts/: cleanup.py  demo.py  verify.py
day6/autoquant_day06/src/: alpaca_client.py  fault_injector.py  retry_wrapper.py
day6/autoquant_day06/tests/: stress_test.py  test_retry_wrapper.py
(+150 files in other folders)
