[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autoquant-day04"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.13.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
