[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "autoquant-day06"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.13",
    "structlog>=24.0",
    "rich>=13.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
